# cmake-cookbook

chapter-01/recipe-03/cxx-objlib-example/: CMakeLists.txt
chapter-01/recipe-04/cxx-example/: CMakeLists.txt
chapter-01/recipe-05/cxx-example/: CMakeLists.txt
chapter-01/recipe-07/example/: CMakeLists.txt
chapter-01/recipe-08/cxx-example/: CMakeLists.txt
chapter-01/recipe-09/cxx-example/: animal-farm.cpp
chapter-01/recipe-10/cxx-example/: CMakeLists.txt
chapter-02/recipe-03/cxx-example/: CMakeLists.txt  hello-world.cpp
chapter-02/recipe-04/cxx-example/: CMakeLists.txt
chapter-02/recipe-05/cxx-example/: CMakeLists.txt
chapter-02/recipe-06/cxx-example/: CMakeLists.txt
chapter-03/recipe-02/c-example/: CMakeLists.txt
chapter-03/recipe-05/cxx-example/: CMakeLists.txt
chapter-03/recipe-07/cxx-example/: CMakeLists.txt
chapter-03/recipe-10/c-example/: CMakeLists.txt  FindZeroMQ.cmake
chapter-03/recipe-11/: README.md
chapter-03/recipe-11/hello_exe/: CMakeLists.txt  main.cc
chapter-03/recipe-11/hello_lib/: CMakeLists.txt
chapter-03/recipe-11/hello_lib/src/: CMakeLists.txt  hello.cc
chapter-03/recipe-11/hello_lib/src/cmake/: Config.cmake.in
chapter-04/recipe-01/cxx-example/: CMakeLists.txt  test.sh
chapter-04/recipe-03/cxx-example/: CMakeLists.txt
chapter-04/recipe-05/cxx-example/: CMakeLists.txt
chapter-04/recipe-08/without-cost-example/: CMakeLists.txt
chapter-05/recipe-01/cxx-example/: CMakeLists.txt
chapter-05/recipe-03/cxx-example/: CMakeLists.txt
chapter-05/recipe-06/cxx-example/: CMakeLists.txt
chapter-05/recipe-07/cxx-example/: CMakeLists.txt
chapter-06/recipe-01/fortran-c-example/: CMakeLists.txt
chapter-06/recipe-07/cxx-example/: CMakeLists.txt  git-hash.cmake
chapter-07/recipe-01/cxx-example/: CMakeLists.txt
chapter-07/recipe-01/cxx-example/src/: CMakeLists.txt
chapter-07/recipe-01/cxx-example/tests/: CMakeLists.txt
chapter-07/recipe-03/c-cxx-example/: CMakeLists.txt  set_compiler_flag.cmake
chapter-07/recipe-04/cxx-example/cmake/: testing.cmake
chapter-07/recipe-04/cxx-example/tests/: CMakeLists.txt
