# set(hellolib_DIR "")
cmake_minimum_required(VERSION 3.16)
find_package(hellolib CONFIG REQUIRED HINTS "/mnt/d/coderepo/cppBase/cmake-cookbook/chapter-03/recipe-11/hello_lib_installed/lib/cmake/" )
if(hellolib_FOUND)
    message("FOUND hellolib")
    message("hellolib version ${hellolib_VERSION}")
endif()
add_executable(main main.cc)
target_link_libraries(main PRIVATE hellolib)
